--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
         text-align: center;
     }
 
+    .img-div{
+        height: 20vh;
+        width: 80%;
+    }
+
     .cat-image{
         border: 1px solid #ccc;
         border-radius: 4px;
@@ -71,14 +76,7 @@
         width: 400px;
         margin: auto;
     }
-    
-    img{
-        height: 400px;
-        width: 400px;
-        align-items: center;
-    }
-    
-  
+      
     @keyframes change-scale {
         100% {
         width: 60%;}
