--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
     body {
-        font-family: system-ui;
+        font-family: Arial, Helvetica, sans-serif;
         background: white;
         color: black;
         text-align: center;
@@ -15,7 +15,8 @@
         border-radius: 4px;
         padding: 5px;
         width: 80%;
-        border: 3px solid #73AD21
+        border: 3px solid #73AD21;
+        height: auto;
     }
   
   
