upload work and see the progress

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
         padding: 5px;
         width: 80%;
         border: 3px solid #73AD21;
-        height: auto;
+        height: 20vh;
     }
   
   
