--- a/style.css
+++ b/style.css
@@ -24,9 +24,10 @@
         width: 80%;
         border: 1px solid #ccc;
         border-radius: 5px;
-        margin: auto;
+        margin-top: 50px;
         padding: 4px;
         box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); 
+        
     }
     
     .title-block{
