--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
         color: red;
     }
   
-    .challenge-box{
+    .contacts-section{
         border: 1px solid #ddd;
         border-radius: 4px;
         padding: 5px;
@@ -66,13 +66,6 @@
         margin: auto;
     }
   
-    .box-shade{
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        padding: 5px;
-        width: 400px;
-        margin: auto;
-    }
       
     @keyframes change-scale {
         100% {
