--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@
         margin: auto;
         padding: 4px;
         box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     
     .intro-block{
