--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
     
     .title-block{
         width: 80%;
+        height: 40vh;
         border: 1px solid black;
         border-radius: 5px;
         margin: auto;
