--- a/style.css
+++ b/style.css
@@ -5,28 +5,32 @@
         text-align: center;
     }
 
-    .cat-image{
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        padding: 5px;
-        width: 80%;
-        border: 3px solid #73AD21;
+    .navbar {
+        overflow: hidden;
+        background-color: #333;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 10vh;
     }
-  
-  
-    .fullCard {
-        margin: 0rem auto;
-        width: 80%;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        margin-top: 50px;
-        padding: 4px;
-        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); 
-        
+      
+    .navbar a {
+        float: right;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
     }
-    
+      
+    .navbar a:hover {
+        background: #ddd;
+        color: black;
+    }   
+
     .title-block{
-        width: 80%;
+        width: 100%;
         height: 40vh;
         border: 1px solid black;
         border-radius: 5px;
@@ -37,7 +41,34 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+    }    
+
+    .my-image{
+        border: 1px solid grey;
+        border-radius: 4px;
+        padding: 5px;
+        width: 80%;
+        border: 3px solid grey;
+        margin-top: 50px;    
     }
+  
+  
+    .fullCard {
+        margin: 0rem auto;
+        width: 100%;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        margin-top: 50px;
+        margin-bottom: 50px;        
+        padding: 4px;
+        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;    
+        height: 100vh;      
+    }
+    
     
     .intro-block{
         border: 1px solid #ddd;
@@ -70,9 +101,43 @@
         width: 600px;
         margin: auto;
     }
+
+    .bottom-section {
+        overflow: hidden;
+        background-color: #333;
+        bottom: 0;
+        width: 100%;
+        height: 40vh;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;            
+    }
+
+    .bottom-section a {
+        display: block;
+        color: #f2f2f2;
+        text-align: left;
+        text-decoration: none;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+    } 
+    .bottom-section li {
+        list-style-type: none;
+    }
+
+    .bottom-section a:hover {
+        background: #ddd;
+        color: black;
+    }       
+
+    
   
-      
     @keyframes change-scale {
         100% {
         width: 60%;}
     }
+
+
+
