--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
         position: fixed;
         top: 0;
         width: 100%;
+        display: flex;
+        justify-content:center;
     }
       
     .navbar a {
